--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/public/packs
+/public/packs-test
+yarn-debug.log*
+.yarn-integrity
+/config/database.yml
+
