--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ yarn-debug.log*
 .yarn-integrity
 /config/database.yml
 
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
