--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue-template-compiler": "^2.5.22"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "webpack-dev-server": "2.11.2"
   }
 }
