--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vue": "^2.5.22",
     "vue-loader": "14.2.2",
     "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.5.22"
+    "vue-template-compiler": "^2.5.22",
+    "vuetify": "^1.5.0"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
