--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -14,6 +14,7 @@ gem 'jbuilder', '~> 2.5'
 gem 'foreman'
 gem 'devise'
 gem 'webpacker'
+gem 'rack-cors'
 gem 'sass-rails', '~> 5.0'
 gem 'bootsnap', '>= 1.1.0', require: false
 
