--- a/rails_api/Gemfile
+++ b/rails_api/Gemfile
@@ -6,22 +6,9 @@ ruby '2.5.1'
 gem 'rails', '~> 5.2.2'
 gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 gem 'puma', '~> 3.11'
-gem 'uglifier', '>= 1.3.0'
-gem 'coffee-rails', '~> 4.2'
-gem 'turbolinks', '~> 5'
-gem 'jbuilder', '~> 2.5'
-gem 'foreman'
 gem 'devise'
-gem 'webpacker'
 gem 'rack-cors'
-gem 'sass-rails', '~> 5.0'
 gem 'bootsnap', '>= 1.1.0', require: false
-
-
-group :development, :test do
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
-end
-
 
 group :development do
   gem 'web-console', '>= 3.3.0'
@@ -43,5 +30,13 @@ group :test do
   gem 'rspec-rails'
   gem 'factory_girl_rails'
 end
+
+group :development do
+  gem 'listen', '>= 3.0.5', '< 3.2'
+  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+  gem 'spring'
+  gem 'spring-watcher-listen', '~> 2.0.0'
+end
+
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
