--- a/rails_api/Gemfile
+++ b/rails_api/Gemfile
@@ -8,6 +8,7 @@ gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 gem 'puma', '~> 3.11'
 gem 'devise'
 gem 'rack-cors'
+gem 'active_model_serializers'
 gem 'bootsnap', '>= 1.1.0', require: false
 
 group :development do
