--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -11,11 +11,13 @@ gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
 gem 'jbuilder', '~> 2.5'
 gem 'foreman'
+gem 'bcrypt', '~> 3.1.7'
 gem 'devise'
 gem 'webpacker'
-gem 'rack-cors'
 gem 'sass-rails', '~> 5.0'
 gem 'bootsnap', '>= 1.1.0', require: false
+gem 'rack-cors'
+gem 'jwt_sessions', '~> 2.3'
 
 
 group :development, :test do
