--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -16,7 +16,8 @@
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
     "vuetify": "^1.5.0",
-    "vuetify-loader": "^1.2.0"
+    "vuetify-loader": "^1.2.0",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
