--- a/rails_api/Gemfile
+++ b/rails_api/Gemfile
@@ -4,7 +4,6 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '2.5.1'
 
 gem 'rails', '~> 5.2.2'
-gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 gem 'puma', '~> 3.11'
 gem 'devise'
 gem 'rack-cors'
@@ -13,6 +12,7 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 group :development do
   gem 'web-console', '>= 3.3.0'
+  gem 'mysql2', '>= 0.4.4', '< 0.6.0'
   gem 'listen', '>= 3.0.5', '< 3.2'
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
@@ -30,6 +30,11 @@ group :test do
   gem 'chromedriver-helper'
   gem 'rspec-rails'
   gem 'factory_girl_rails'
+end
+
+
+group :production do
+  gem 'pg'
 end
 
 group :development do
