--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,19 +9,19 @@ services:
       - '3316:3306'
     volumes:
       - ./db/mysql/volumes:/var/lib/mysql
-
   rails:
-   build: ./rails
+    build: ./rails_api
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - ./rails:/rails
     ports:
       - "5000:5000"
-    depnds_on:
+    depends_on:
       - db
   nuxt:
     build: ./nuxt
     command: npm run dev
     volumes:
       - ./nuxt:/nuxt
-    ports:      - "3000:3000"
+    ports:     
+      - "3000:3000"
