--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -20,10 +20,15 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "css-loader": "^2.1.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
+    "nuxt-sass-resources-loader": "^2.0.5",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2"
   }
 }
