--- a/rails_api/Gemfile
+++ b/rails_api/Gemfile
@@ -29,7 +29,8 @@ group :test do
   gem 'selenium-webdriver'
   gem 'chromedriver-helper'
   gem 'rspec-rails'
-  gem 'factory_girl_rails'
+  gem 'rails-controller-testing'
+  gem 'factory_bot_rails'
 end
 
 
