--- a/back/api/Gemfile
+++ b/back/api/Gemfile
@@ -9,6 +9,7 @@ gem 'devise'
 gem 'rack-cors'
 gem 'active_model_serializers'
 gem 'bootsnap', '>= 1.1.0', require: false
+gem 'seed-fu', '~> 2.3'
 
 group :development do
   gem 'web-console', '>= 3.3.0'
