--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     image: mysql
     environment:
       MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: 
     ports:
       - '3316:3306'
     volumes:
-      - ./back/rails_api/db/mysql/volumes:/var/lib/mysql
+      - ./back/api/db/mysql/volumes:/var/lib/mysql
   rails:
     build: ./back/api
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -16,6 +16,7 @@ services:
       - ./back/api:/rails
     ports:
       - "5000:5000"
+    tty: true
     depends_on:
       - db
   nuxt:
