--- a/back/api/Gemfile
+++ b/back/api/Gemfile
@@ -10,6 +10,7 @@ gem 'rack-cors'
 gem 'active_model_serializers'
 gem 'bootsnap', '>= 1.1.0', require: false
 gem 'seed-fu', '~> 2.3'
+ gem 'pry-rails'   
 
 group :development do
   gem 'web-console', '>= 3.3.0'
